# Challenge_Grupo_3

./: .gitignore  pyproject.toml
src/Challenge/: dataset.py  evaluate.py  train.py
